[Add] Google Sign In [Add] Apple Sign In [Mod] UI will base on isAppleSignInAvailable

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.817201206817-lh8mvntqbtvkdjj16uom79m85f26sjeq</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
