--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_sign_in: ^4.0.7
   apple_sign_in: ^0.1.0
   provider: ^4.0.1
+  cloud_firestore: ^0.12.9+5
 
 dev_dependencies:
   flutter_test:
