--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   apple_sign_in: ^0.1.0
   provider: ^4.0.1
   cloud_firestore: ^0.12.9+5
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
