--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   provider: ^4.0.1
   cloud_firestore: ^0.12.9+5
   intl: ^0.16.0
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
